# brofinetune

./: .gitignore  MODEL_CARD.md  PLAN.md  README.md  WINDOWS_INSTRUCTION.md  bro.ipynb  bro_andy.py  dev.ipynb  hg_chat.py  pyproject.toml  test_bro.ipynb  training_data.json
bro-chatbot-gguf/: config.json  generation_config.json  model.safetensors.index.json
