[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project]
name = "brofinetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "unsloth>=2025.8.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch" },
]
torchvision = [
    { index = "pytorch" },
]
torchaudio = [
    { index = "pytorch" },
]

